@@ -334,11 +334,6 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
         update.put(COL_REGIONINFO, Writables.getBytes(
           newRegions[i].getRegionInfo()));
         t.commit(update);
-        
-/*        long lockid = t.startUpdate(newRegions[i].getRegionName());
-        t.put(lockid, COL_REGIONINFO, Writables.getBytes(
-          newRegions[i].getRegionInfo()));
-        t.commit(lockid);*/
       }
           
       // Now tell the master about the new regions
@@ -348,9 +343,9 @@ public class HRegionServer implements HConstants, HRegionInterface, Runnable {
       reportSplit(oldRegionInfo, newRegions[0].getRegionInfo(),
         newRegions[1].getRegionInfo());
       LOG.info("region split, META updated, and report to master all" +
-        " successful. Old region=" + oldRegionInfo.getRegionName() +
-        ", new regions: " + newRegions[0].getRegionName() + ", " +
-        newRegions[1].getRegionName() + ". Split took " +
+        " successful. Old region=" + oldRegionInfo.toString() +
+        ", new regions: " + newRegions[0].toString() + ", " +
+        newRegions[1].toString() + ". Split took " +
         StringUtils.formatTimeDiff(System.currentTimeMillis(), startTime));
       
       // Do not serve the new regions. Let the Master assign them.
