@@ -22,6 +22,9 @@ Hbase Change Log
    HBASE-446   Fully qualified hbase.rootdir doesn't work
    HBASE-438   XMLOutputter state should be initialized. (Edward Yoon via Stack)
    HBASE-8     Delete table does not remove the table directory in the FS
+   HBASE-428   Under continuous upload of rows, WrongRegionExceptions are thrown
+               that reach the client even after retries
+   
    
   IMPROVEMENTS
    HBASE-415   Rewrite leases to use DelayedBlockingQueue instead of polling
